[metadata]
name = librehtf
version = 0.0.3
url = https://github.com/mcpcpc/librehtf
project_urls =
    Donate = https://www.paypal.me/mcpcpc/usd5
    Source Code = https://github.com/mcpcpc/librehtf/
    Issue Tracker = https://github.com/mcpcpc/librehtf/issues
author = Michael Czigler
author_email = contact@mcpcpc.com
license = BSD-3-Clause
license_file = LICENSE
description = An open hardware test framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask, hardware, test, framework
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flask
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = true
python_requires = >= 3.7
install_requires =
    Flask>=2.2
    PyJWT>=2.6

[options.extras_require]
test =
    coverage

[coverage:run]
branch = True
source = librehtf
