[metadata]
name = librehtf
version = 0.0.4
url = https://github.com/mcpcpc/librehtf
project_urls =
    Donate = https://www.paypal.me/mcpcpc/usd5
    Source Code = https://github.com/mcpcpc/librehtf/
    Issue Tracker = https://github.com/mcpcpc/librehtf/issues
author = Michael Czigler
author_email = contact@mcpcpc.com
license = BSD-3-Clause
license_file = LICENSE
description = An open hardware test framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = flask, dash, dmc, mantine, hardware, test, framework
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Flask
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Topic :: Internet :: WWW/HTTP :: WSGI :: Application

[options]
packages = find:
include_package_data = true
python_requires = >= 3.11
install_requires =
    dash[celery,diskcache]
    dash-iconify
    dash-mantine-components>=0.13.0a2
    flask>=2.2
    pyjwt>=2.6

[options.extras_require]
test = coverage
serve = waitress
lint = black

[coverage:run]
branch = True
source = librehtf
